# MagnumEyelash

./: CMakeLists.txt  README.md
scenes/: SceneWithBetterHair.glb
src/: CMakeLists.txt  EyelashShader.cpp  EyelashShader.h  EyelashTessellationShader.cpp  EyelashTessellationShader.h  EyelashVisualizer.cpp  MyApplication.cpp  resources.conf
src/shaders/: EyelashShader.frag  EyelashShader.geom  EyelashShader.tcs  EyelashShader.tes  EyelashShader.vert  TransformCoordinate.vert  WireFrame.geom
